# Mercury

./: .gitignore  CMakeLists.txt
src/: headers.hpp  main.cpp
src/chart/: TODO.md  axis.cpp  axis.hpp  axis_range.hpp  bar_chart_area.cpp  bar_chart_area.hpp  bar_chart_area_impl.hpp  chart.hpp  dataset.hpp  dataset_impl.hpp
src/ui/: main_window.cpp  main_window.hpp  ui.hpp
